objects/User/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>