objects/User/fields/TT_Role__c.field-meta.xml
<CustomField>
    <fullName>TT_Role__c</fullName>
    <label>TT Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>