objects/User/fields/TT_UserName__c.field-meta.xml
<CustomField>
    <fullName>TT_UserName__c</fullName>
    <label>TT UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>